feat: Force replace Interactive Non-Login shell (exec `bash`) with Interactive Login shell to load .bash_profile

--- a/meta/configs/bash.osx.yaml
+++ b/meta/configs/bash.osx.yaml
@@ -4,6 +4,5 @@
       relink: true
       force: true
 - link:
-    ~/.profile: shells/bash/profile.osx
-    ~/.bash_aliases: shells/bash/bash_aliases.osx
+    ~/.profile: shells/profile.osx
 - brew: [bash]
