--- a/meta/configs/bash.yaml
+++ b/meta/configs/bash.yaml
@@ -6,8 +6,9 @@
 - clean:
     - ~/.config/bash
 - link:
-    ~/.bash_profile: shells/bash/bash_profile
     ~/.bashrc: shells/bash/bashrc
+    ~/.bash_profile: shells/bash/bash_profile
+    ~/.bash_aliases: shells/bash/bash_aliases
     ~/.config/bash/.bash_prompt: shells/bash/config/bash/bash_prompt
     ~/.config/bash/sensible.bash: shells/bash/config/bash/sensible.bash
     ~/.config/bash/bashmarks.sh: shells/bash/config/bash/bashmarks.sh
