--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@
 #
 
 # Auto detect text files and perform LF normalization
-*       text=auto
+*       text=auto eol=lf
 
 *.txt   text
 *.java  text diff=java
