--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -5,35 +5,41 @@
       force: true
 - link:
     ~/.gemrc: development/ruby/gemrc
-    # ~/.ruby-version: development/ruby/ruby-version
+    ~/.ruby-version: development/ruby/ruby-version
     # ~/.config/zsh/settings/rvm.zsh: development/ruby/zsh/settings/rvm.zsh
     # ~/.config/zsh/settings/rbenv.zsh: development/ruby/zsh/settings/rbenv.zsh
 # Obsoleted by mise
-# - shell++:
-#   - description: Install rbenv
-#     condition: '! hash rbenv 2>/dev/null || test -h $(which rbenv)'
-#   - stdout: true
-#     stderr: true
-#     command: |
-#       export PATH="$HOME/.rbenv/bin:$PATH"
-#       if [ ! -d ~/.rbenv  ]; then
-#         git clone https://github.com/rbenv/rbenv.git ~/.rbenv
-#         git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
-#         # curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-installer | bash
-#         git clone https://github.com/rkh/rbenv-update.git ~/.rbenv/plugins/rbenv-update
-#         git clone https://github.com/tpope/rbenv-communal-gems.git ~/.rbenv/plugins/rbenv-communal-gems
-#         git clone https://github.com/ianheggie/rbenv-binstubs.git ~/.rbenv/plugins/rbenv-binstubs
-#         git clone https://github.com/garnieretienne/rvm-download.git ~/.rbenv/plugins/rvm-download
-#       else
-#         rbenv update
-#       fi
+- shell++:
+  - description: Install rbenv
+    condition: '! hash rbenv 2>/dev/null || test -h $(which rbenv)'
+  - stdout: true
+    stderr: true
+    command: |
+      export PATH="$HOME/.rbenv/bin:$PATH"
+      if [ ! -d ~/.rbenv  ]; then
+        git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+        git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+        # curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-installer | bash
+        # git clone https://github.com/rkh/rbenv-update.git ~/.rbenv/plugins/rbenv-update
+        # git clone https://github.com/tpope/rbenv-communal-gems.git ~/.rbenv/plugins/rbenv-communal-gems
+        # git clone https://github.com/ianheggie/rbenv-binstubs.git ~/.rbenv/plugins/rbenv-binstubs
+        # git clone https://github.com/garnieretienne/rvm-download.git ~/.rbenv/plugins/rvm-download
+      else
+        rbenv update
 
-#       eval "$(rbenv init -)"
+        # Cleanup obsoleted plugins (included in rbenv)
+        rm -rf ~/.rbenv/plugins/rbenv-update
+        rm -rf ~/.rbenv/plugins/rbenv-communal-gems
+        rm -rf ~/.rbenv/plugins/rbenv-binstubs
+        rm -rf ~/.rbenv/plugins/rvm-download
+      fi
 
-#       if [ -r ~/.ruby-version ] && [ ! -d ~/.rbenv/versions/$(cat ~/.ruby-version) ]; then
-#         rbenv download $(cat ~/.ruby-version) || rbenv install $(cat ~/.ruby-version) # CentOS 7 does not have Ruby 2.4.6
-#         rbenv global $(cat ~/.ruby-version)
-#       fi
+      eval "$(rbenv init -)"
 
-#       rbenv communize --all
-#       curl -fsSL https://raw.githubusercontent.com/rbenv/rbenv-installer/main/bin/rbenv-doctor | bash
+      if [ -r ~/.ruby-version ] && [ ! -d ~/.rbenv/versions/$(cat ~/.ruby-version) ]; then
+        rbenv download $(cat ~/.ruby-version) || rbenv install $(cat ~/.ruby-version) # CentOS 7 does not have Ruby 2.4.6
+        rbenv global $(cat ~/.ruby-version)
+      fi
+
+      rbenv communize --all
+      curl -fsSL https://raw.githubusercontent.com/rbenv/rbenv-installer/main/bin/rbenv-doctor | bash
