--- a/meta/configs/apt.linux.yaml
+++ b/meta/configs/apt.linux.yaml
@@ -26,9 +26,14 @@
     - ccze
     - python3-pip
     - ruby
-- aptget:
-    - wget curl make llvm build-essential xz-utils libffi-dev liblzma-dev python-openssl # Python and Ruby build requirements, see https://github.com/pyenv/pyenv/wiki/Common-build-problems
+    # Python and Ruby build requirements, see https://github.com/pyenv/pyenv/wiki/Common-build-problems
+    - wget curl make llvm build-essential xz-utils libffi-dev liblzma-dev python-openssl
 - aptget:
     - >-
       libssl-dev zlib1g-dev libbz2-dev libreadline-dev
       libsqlite3-dev libncurses5-dev libncursesw5-dev tk-dev
+
+    # This fix `curl: (60) server certificate verification failed. CAfile: /etc/ssl/certs/ca-certificates.crt CRLfile: none` when use `brew install` on Ubuntu 16.04
+    # See https://www.zoocha.com/news/fixing-issues-multiple-servers-caused-recently-expired-root-certificate
+    - libgnutls-openssl27
+
