--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -21,8 +21,8 @@
 
       # alias sudo='nocorrect sudo' is required by zsh's auto-completion feature to work, see https://unix.stackexchange.com/questions/260563/sudo-nocorrect-command-not-found
       alias sudo='nocorrect sudo'
-      sudo ln -sfn /opt/homebrew/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
-      sudo ln -sfn /opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
+      sudo ln -sfn $(brew --prefix)/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
+      sudo ln -sfn $(brew --prefix)/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
 
       /usr/libexec/java_home -V
       export JAVA_HOME=$(/usr/libexec/java_home -v 11)
