fix: Do NOT load on WSL1 because of https://github.com/microsoft/WSL/issues/2395
* zdharma/fast-syntax-highlighting MUST load before zsh-users/zsh-autosuggestions or auto-complate will NOT work
+ Add `duf` for better `df`

--- a/meta/configs/brew.yaml
+++ b/meta/configs/brew.yaml
@@ -19,6 +19,7 @@
     - direnv
     - screen # 5.0 to support True Color
     - byobu # screen + tmux
+    - duf # a better 'df' alternative, see https://freedium.cfd/https://blog.devops.dev/6-linux-utilities-you-should-install-right-now-75470963a021
 
 - link:
     ~/.screenrc: apps/screen/screenrc
