--- a/meta/configs/vim.linux.yaml
+++ b/meta/configs/vim.linux.yaml
@@ -34,7 +34,7 @@
     - neovim
 - aptget:
     # See https://github.com/fsharp/zarchive-vim-fsharp/issues/96#issuecomment-1194243502
-    - python3-pynvim
+    - python3-pynvim # Not FOUND on Ubuntu 18.04 (it's named python3-neot=0;35mvim/bionic 0.2.0-1 all)
 - shell++:
     # - - pip2 install neovim
     #   - Installing Python 2 NeoVim plugin
