--- a/meta/configs/tmux.yaml
+++ b/meta/configs/tmux.yaml
@@ -13,13 +13,10 @@
 
 # !NOTE: require openssl@3
 - brew:
-    - tmux
+    - tmuxinator
 
+# See https://github.com/jimeh/tmuxifier/blob/main/README.md#tmuxifier-vs-tmuxinator
 - shell++:
-    - description: Install tmuxinator
-      stdout: true
-      stderr: true
-      command: gem install tmuxinator
     - description: Install tmuxifier
       stdout: true
       stderr: true
